--- a/Views/Boekhoud/Index.cshtml
+++ b/Views/Boekhoud/Index.cshtml
@@ -14,22 +14,20 @@
             <div class="form-group">
                 <label for="GJAHR">Boekjaar:</label>
                 <select class="form-control" id="GJAHR" name="GJAHR">
-                    @for (int i = 1900; i <= DateTime.Now.Year; i++)
+                    <option>Niet gespecificeerd</option>
+                    @foreach (string item in Model.GJAHRList!)
                     {
-                        <option>@i</option>
+                        <option>@item</option>
                     }
                 </select>
             </div>
             <div class="form-group">
                 <label for="BUKRS">Bedrijfsnummer:</label>
                 <select class="form-control" id="BUKRS" name="BUKRS">
-                    @foreach (BKFP item in Model.BKFP)
+                    <option>Niet gespecificeerd</option>
+                    @foreach (string item in Model.BUKRSList!)
                     {
-                        <option>@item.BUKRS</option>
-                    }
-                    @foreach (BSEG item in Model.BSEG)
-                    {
-                        <option>@item.BUKRS</option>
+                        <option>@item</option>
                     }
                 </select>
             </div>
@@ -38,30 +36,27 @@
                 <div class="input-group">
                     <label for="BELNR" class="custom-label">Beginwaarde:</label>
                     <select class="form-control" id="BELNR" name="BELNR">
-                    @foreach (BKFP item in Model.BKFP)
-                    {
-                        <option>@item</option>
-                    }
-                    @foreach (BSEG item in Model.BSEG)
-                    {
-                            
-                    }
+                        @foreach (string item in Model.BELNRList!)
+                        {
+                            <option>@item</option>
+                        }
                     </select>
                 </div>
                 <div class="input-group">
                     <label for="BELNR2" class="custom-label">Eindwaarde:</label>
                     <select class="form-control" id="BELNR2" name="BELNR2">
-                    @for (int i = 1900; i <= DateTime.Now.Year; i++)
-                    {
-                        @if (i==DateTime.Now.Year)
+                        @for (int i = 0; i < Model.BELNRList!.Count; i++)
+                        {
+                            var documentNumber = Model.BELNRList[i];
+                            if (i == Model.BELNRList.Count - 1)
                             {
-                                <option selected="selected">@i</option>
-                            } 
+                                <option value="@documentNumber" selected="selected">@documentNumber</option>
+                            }
                             else
                             {
-                                <option>@i</option>
+                                <option value="@documentNumber">@documentNumber</option>
                             }
-                    }
+                        }
                     </select>
                 </div>
             </div>
@@ -75,10 +70,8 @@
     }
     else if ((string)ViewData["table"]! == "combined")
     {
+        <p>aantal: @ViewData["count"]</p>
         if (Model.Details)
-        {
-            <p>aantal: @ViewData["count"]</p>
-        } else
         {
             <h2>Gecombineerde Gegevens (BKFP + BSEG)</h2>
             <table border="1" class="table">
@@ -99,27 +92,27 @@
                     @foreach (var item in Model.BKFP)
                     {
                         <tr>
-                            <td>BKFP</td>
+                            <th scope="row">BKFP</th>
                             <td>@item.BUKRS</td>
                             <td>@item.BELNR</td>
                             <td>@item.GJAHR</td>
-                            <td>N/A</td>
+                            <td>-</td>
                             <td>@item.BLART</td>
                             <td>@item.BLDAT</td>
-                            <td>N/A</td>
-                            <td>N/A</td>
+                            <td>-</td>
+                            <td>-</td>
                         </tr>
                     }
                     @foreach (var item in Model.BSEG)
                     {
                         <tr>
-                            <td>BSEG</td>
+                            <th scope="row">BSEG</th>
                             <td>@item.BUKRS</td>
                             <td>@item.BELNR</td>
                             <td>@item.GJAHR</td>
                             <td>@item.BUZEI</td>
-                            <td>N/A</td>
-                            <td>N/A</td>
+                            <td>-</td>
+                            <td>-</td>
                             <td>@item.BSCHL</td>
                             <td>@item.AUGDT</td>
                         </tr>
