--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -13,6 +13,7 @@
         <nav class="navbar navbar-expand-sm navbar-light bg-white border-bottom box-shadow mb-3">
             <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
                 <ul class="navbar-nav flex-grow-1">
+                    <nothing class="navbar-brand" asp-area="">BoekhoudAssistent</nothing>
                     <li class="nav-item">
                         <a class="nav-link text-dark" asp-area="" asp-controller="Boekhoud" asp-action="Index">Selectie</a>
                     </li>
@@ -23,7 +24,7 @@
                         <a class="nav-link text-dark" asp-area="" asp-controller="Boekhoud" asp-action="Index" asp-route-table="BKFP">BKFP</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link text-dark" asp-area="" asp-controller="Boekhoud" asp-action="Index" asp-route-table="combined">Combined</a>
+                        <a class="nav-link text-dark" asp-area="" asp-controller="Boekhoud" asp-action="Index" asp-route-table="combined" asp-route-details="true">Combined</a>
                     </li>
                 </ul>
             </div>
