Scaffolded bkfp and bseg views
also included flow chart

--- a/Views/Boekhoud/Index.cshtml
+++ b/Views/Boekhoud/Index.cshtml
@@ -50,11 +50,11 @@
                             var documentNumber = Model.BELNRList[i];
                             if (i == Model.BELNRList.Count - 1)
                             {
-                                <option value="@documentNumber" selected="selected">@documentNumber</option>
+                                <option selected="selected">@documentNumber</option>
                             }
                             else
                             {
-                                <option value="@documentNumber">@documentNumber</option>
+                                <option>@documentNumber</option>
                             }
                         }
                     </select>
